# adventure

./: .env  .gitignore  README.md  databse.db  main.py  pyproject.toml
api/: __init__.py  job.py  story.py
core/: config.py  models.py  prompts.py  story_generator.py
db/: database.py
models/: job.py  story.py
schemas/: job.py  story.py
